# toddlerbot

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: deploy_page.yml
docs/: conf.py  index.rst  requirements.txt
docs/_static/: bom_v8.csv  positions_v8.csv
docs/api/: toddlerbot.actuation.rst  toddlerbot.depth.rst  toddlerbot.descriptions.rst  toddlerbot.locomotion.rst  toddlerbot.policies.rst  toddlerbot.reference.rst  toddlerbot.rst  toddlerbot.sim.rst  toddlerbot.sim.terrain.rst  toddlerbot.tools.rst  toddlerbot.utils.rst  toddlerbot.visualization.rst
docs/features/: 01_safety_stand.rst  02_teleoperation_arms.rst  03_diy_battery.rst
docs/hardware/: 01_bill_of_materials.rst  02_pcb8ch.rst  03_3d_printing.rst  04_assembly_manual.rst
docs/sections/: 01_hardware.rst  06_api.rst
docs/software/: 01_setup.rst  02_jetson_orin.rst
docs/tools/: 01_zero_point_calibration.rst  02_sysID.rst  03_keyframe_animation.rst  04_onshape_to_robot.rst
examples/: test_actuation_model.py  test_apriltag.py  test_butter.py  test_calibrate.py  test_camera.py  test_dynamixel.py  test_foundation_stereo.py  test_imu.py  test_imu_noisy.py  test_jax_torch.py  test_joystick.py  test_mass.py  test_mic.py  test_onnx.py  test_openai_chat.py  test_ref_motion.py  test_reward.py  test_speaker.py  test_teleoperation_gmr.py  test_terrain.py  test_terrain_mjx.py
motion/: cartwheel_2xc.lz4  cartwheel_2xm.lz4  crawl_2xc.lz4  crawl_2xm.lz4  cuddle_2xc.lz4  cuddle_2xm.lz4  hold_2xc.lz4  hold_2xm.lz4  kneel_2xc.lz4  kneel_2xm.lz4  migrate_human.py  migrate_pkl.py  migrate_policy.py  print.py  pull_up_grasp_2xc.lz4  pull_up_grasp_2xm.lz4  pull_up_pull_2xc.lz4  pull_up_pull_2xm.lz4  push_up_2xc.lz4  push_up_2xm.lz4  render.py
scripts/: run_rl_exp_seq.sh  setup_depth_module.sh
toddlerbot/: __init__.py
toddlerbot/algorithms/: __init__.py  zmp_walk.py  (+1 more)
(+309 files in other folders)
